# matlibr

./: .gitignore  CMakeLists.txt  LICENSE  README.md  matlibrConfig.cmake
.github/workflows/: test.yml
cmake/: AddCatch2.cmake  Findopenblas.cmake
examples/: Makefile  README.md  matrix_addition.c  matrix_multiplication.c
scripts/: build.sh  cleanup.sh  install_openblas.sh  setup_dependencies.sh
src/: CMakeLists.txt  matrix.c  matrix.h
tests/: CMakeLists.txt  test_matrix.c
